# custodian

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/application/: custodian.rs
src/domain/: mod.rs
src/domain/file/: mod.rs  retrieve_file.rs  retrieve_from_filestore.rs  upload_file.rs  upload_file_request.rs  upload_file_tests.rs
src/domain/file/gateway/: file_storage.rs  mod.rs  retrieve_file.rs  upload_file.rs
src/domain/resource/: associate_signature_with_resource.rs  associate_signature_with_resource_tests.rs  generate_new_resource.rs  generate_new_resource_tests.rs  mod.rs  new_resource.rs  new_resource_request.rs  new_resource_request_tests.rs  new_resource_tests.rs
src/domain/resource/gateway/: mod.rs  resource_storage.rs  signature_storage.rs
src/io/: mod.rs
src/io/actix/: actix_web_server.rs  mod.rs
src/io/actix/route_handlers/: file.rs  mod.rs  resource.rs  resource_signature.rs
src/io/actix/route_handlers/utils/: mod.rs
src/io/std/: mod.rs  std_fs_filestore.rs
src/kernel/: input_source.rs  mod.rs
src/kernel/drivers/: atomic_id_generator.rs  atomic_id_generator_tests.rs  atomic_resource_generator.rs  atomic_resource_generator_tests.rs  inmemory_resource_storage.rs  inmemory_storage.rs  mod.rs
src/kernel/gateways/: mod.rs  resource_generator.rs
src/kernel/io/port/: input_source.rs  mod.rs
src/kernel/usecase/id/: id_generator_gateway.rs  mod.rs
src/kernel/values/: id.rs  id_tests.rs  mod.rs  resource_id.rs  resource_id_tests.rs  value_object.rs
test_framework/: Cargo.toml
