[package]
name = "neural_gateway_custodian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.4.1"
serde = { version = "1.0.194", features = ["derive"] }
tokio = "1.35.1"
url = "2.5.0"

[dev-dependencies]
test_framework = { path = "./test_framework" }
